Fixed the alignment of the items to make them filling the verical space

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -125,6 +125,9 @@ footer ul {
   .footer__section--three {
     grid-row: 1/3;
     text-align: justify;
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 42px;
   }
 
   .footer__wrapper {
@@ -142,7 +145,14 @@ footer ul {
   }
 
   .footer__title--link,
-  .footer__wrapper {
+  .footer__wrapper,
+  .footer__title {
     margin: 0;
+  }
+
+  .copyright,
+  .social_media__list {
+    margin-top: 42px;
+    margin-bottom: 0;
   }
 }
