--- a/webroot/css/index.css
+++ b/webroot/css/index.css
@@ -414,7 +414,10 @@ footer ul {
     justify-content: unset; }
   .footer__section--three {
     grid-row: 1/3;
-    text-align: justify; }
+    text-align: justify;
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 42px; }
   .footer__wrapper {
     grid-column: 2/3; }
   .footer__section--three,
@@ -424,5 +427,10 @@ footer ul {
   .footer__nav--list-item {
     margin-top: 0; }
   .footer__title--link,
-  .footer__wrapper {
-    margin: 0; } }
+  .footer__wrapper,
+  .footer__title {
+    margin: 0; }
+  .copyright,
+  .social_media__list {
+    margin-top: 42px;
+    margin-bottom: 0; } }
